examples/bad/hold_const_true_after.mko
// Must fail: const-true if takes only then — move reaches after join.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    if true {
        consume(s)
    } else {
    }
    print(s)
}
